--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-cardview": "^2.0.5",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.1.0",
     "react-native-platform-touchable": "^1.1.1",
@@ -30,7 +32,8 @@
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-tab-view": "^2.15.1",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "recyclerlistview": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.5",
